# spotfetch

./: .gitignore  CMakeLists.txt  spotfetch
include/: auth.hpp  callback_server.hpp  http_client.hpp  mock_data.hpp  models.hpp  pkce.hpp  renderer.hpp  spotify_client.hpp  token_store.hpp
src/: auth.cpp  callback_server.cpp  http_client.cpp  main.cpp  mock_data.cpp  pkce.cpp  renderer.cpp  spotify_client.cpp  token_store.cpp
